force-app/main/default/objects/eCard_Bus_Status__x/eCard_Bus_Status__x.object-meta.xml
<CustomObject>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_view_ecard$ecard_bus_status</externalName>
    <label>eCard_Bus_Status</label>
    <pluralLabel>eCard_Bus_Status</pluralLabel>
</CustomObject>