force-app/main/default/objects/eCard_Bus_Status__x/fields/acceptance_test_total__c.field-meta.xml
<CustomField>
    <fullName>acceptance_test_total__c</fullName>
    <description>acceptance_test_total</description>
    <externalDeveloperName>acceptance_test_total</externalDeveloperName>
    <label>acceptance_test_total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>