force-app/main/default/objects/eCard_Bus_Status__x/fields/acceptance_tests_verified__c.field-meta.xml
<CustomField>
    <fullName>acceptance_tests_verified__c</fullName>
    <description>acceptance_tests_verified</description>
    <externalDeveloperName>acceptance_tests_verified</externalDeveloperName>
    <label>acceptance_tests_verified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>