force-app/main/default/objects/eCard_Bus_Status__x/fields/anti_lock_brake_tests_verified__c.field-meta.xml
<CustomField>
    <fullName>anti_lock_brake_tests_verified__c</fullName>
    <description>anti_lock_brake_tests_verified</description>
    <externalDeveloperName>anti_lock_brake_tests_verified</externalDeveloperName>
    <label>anti_lock_brake_tests_verified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>