force-app/main/default/objects/eCard_Bus_Status__x/fields/antilock_brake_total__c.field-meta.xml
<CustomField>
    <fullName>antilock_brake_total__c</fullName>
    <description>antilock_brake_total</description>
    <externalDeveloperName>antilock_brake_total</externalDeveloperName>
    <label>antilock_brake_total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>