force-app/main/default/objects/eCard_Bus_Status__x/fields/attachment_check_list_not_verified__c.field-meta.xml
<CustomField>
    <fullName>attachment_check_list_not_verified__c</fullName>
    <description>attachment_check_list_not_verified</description>
    <externalDeveloperName>attachment_check_list_not_verified</externalDeveloperName>
    <label>attachment_check_list_not_verified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>