force-app/main/default/objects/eCard_Bus_Status__x/fields/attachment_total__c.field-meta.xml
<CustomField>
    <fullName>attachment_total__c</fullName>
    <description>attachment_total</description>
    <externalDeveloperName>attachment_total</externalDeveloperName>
    <label>attachment_total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>