force-app/main/default/objects/eCard_Bus_Status__x/fields/discrepancies__c.field-meta.xml
<CustomField>
    <fullName>discrepancies__c</fullName>
    <description>discrepancies</description>
    <externalDeveloperName>discrepancies</externalDeveloperName>
    <label>discrepancies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>