force-app/main/default/objects/eCard_Bus_Status__x/fields/discrepancies_open__c.field-meta.xml
<CustomField>
    <fullName>discrepancies_open__c</fullName>
    <description>discrepancies_open</description>
    <externalDeveloperName>discrepancies_open</externalDeveloperName>
    <label>discrepancies_open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>