force-app/main/default/objects/eCard_Bus_Status__x/fields/discrepancies_resolved__c.field-meta.xml
<CustomField>
    <fullName>discrepancies_resolved__c</fullName>
    <description>discrepancies_resolved</description>
    <externalDeveloperName>discrepancies_resolved</externalDeveloperName>
    <label>discrepancies_resolved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>