force-app/main/default/objects/eCard_Bus_Status__x/fields/discrepancies_verified__c.field-meta.xml
<CustomField>
    <fullName>discrepancies_verified__c</fullName>
    <description>discrepancies_verified</description>
    <externalDeveloperName>discrepancies_verified</externalDeveloperName>
    <label>discrepancies_verified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>