force-app/main/default/objects/eCard_Bus_Status__x/fields/final_acceptance_tests_verified__c.field-meta.xml
<CustomField>
    <fullName>final_acceptance_tests_verified__c</fullName>
    <description>final_acceptance_tests_verified</description>
    <externalDeveloperName>final_acceptance_tests_verified</externalDeveloperName>
    <label>final_acceptance_tests_verified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>