force-app/main/default/objects/eCard_Bus_Status__x/fields/final_tests_total__c.field-meta.xml
<CustomField>
    <fullName>final_tests_total__c</fullName>
    <description>final_tests_total</description>
    <externalDeveloperName>final_tests_total</externalDeveloperName>
    <label>final_tests_total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>