force-app/main/default/objects/eCard_Bus_Status__x/fields/green_sheet_date__c.field-meta.xml
<CustomField>
    <fullName>green_sheet_date__c</fullName>
    <description>green_sheet_date</description>
    <externalDeveloperName>green_sheet_date</externalDeveloperName>
    <label>green_sheet_date</label>
    <type>Date</type>
</CustomField>