force-app/main/default/objects/eCard_Bus_Status__x/fields/op_check_total__c.field-meta.xml
<CustomField>
    <fullName>op_check_total__c</fullName>
    <description>op_check_total</description>
    <externalDeveloperName>op_check_total</externalDeveloperName>
    <label>op_check_total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>