force-app/main/default/objects/eCard_Bus_Status__x/fields/open_shortages_received__c.field-meta.xml
<CustomField>
    <fullName>open_shortages_received__c</fullName>
    <description>open_shortages_received</description>
    <externalDeveloperName>open_shortages_received</externalDeveloperName>
    <label>open_shortages_received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>