force-app/main/default/objects/eCard_Bus_Status__x/fields/operations__c.field-meta.xml
<CustomField>
    <fullName>operations__c</fullName>
    <description>operations</description>
    <externalDeveloperName>operations</externalDeveloperName>
    <label>operations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>