force-app/main/default/objects/eCard_Bus_Status__x/fields/operations_discr_short__c.field-meta.xml
<CustomField>
    <fullName>operations_discr_short__c</fullName>
    <description>operations_discr_short</description>
    <externalDeveloperName>operations_discr_short</externalDeveloperName>
    <label>operations_discr_short</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>