force-app/main/default/objects/eCard_Bus_Status__x/fields/operations_verified__c.field-meta.xml
<CustomField>
    <fullName>operations_verified__c</fullName>
    <description>operations_verified</description>
    <externalDeveloperName>operations_verified</externalDeveloperName>
    <label>operations_verified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>