force-app/main/default/objects/eCard_Bus_Status__x/fields/out_of_factory_comment__c.field-meta.xml
<CustomField>
    <fullName>out_of_factory_comment__c</fullName>
    <description>out_of_factory_comment</description>
    <externalDeveloperName>out_of_factory_comment</externalDeveloperName>
    <label>out_of_factory_comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>