force-app/main/default/objects/eCard_Bus_Status__x/fields/serial_numbers_logged__c.field-meta.xml
<CustomField>
    <fullName>serial_numbers_logged__c</fullName>
    <description>serial_numbers_logged</description>
    <externalDeveloperName>serial_numbers_logged</externalDeveloperName>
    <label>serial_numbers_logged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>