force-app/main/default/objects/eCard_Bus_Status__x/fields/shortages__c.field-meta.xml
<CustomField>
    <fullName>shortages__c</fullName>
    <description>shortages</description>
    <externalDeveloperName>shortages</externalDeveloperName>
    <label>shortages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>