force-app/main/default/objects/eCard_Bus_Status__x/fields/shortages_open__c.field-meta.xml
<CustomField>
    <fullName>shortages_open__c</fullName>
    <description>shortages_open</description>
    <externalDeveloperName>shortages_open</externalDeveloperName>
    <label>shortages_open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>