force-app/main/default/objects/eCard_Bus_Status__x/fields/shortages_resolved__c.field-meta.xml
<CustomField>
    <fullName>shortages_resolved__c</fullName>
    <description>shortages_resolved</description>
    <externalDeveloperName>shortages_resolved</externalDeveloperName>
    <label>shortages_resolved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>