force-app/main/default/objects/eCard_Bus_Status__x/fields/shortages_verified__c.field-meta.xml
<CustomField>
    <fullName>shortages_verified__c</fullName>
    <description>shortages_verified</description>
    <externalDeveloperName>shortages_verified</externalDeveloperName>
    <label>shortages_verified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>